# apg-6.3

./: CMakeLists.txt  Makefile.in  configure
ApgLib/: Memory.c
